# emoji-kbd

./: .gitignore  README.md  ahk-emoji.ahk  boards.py  emojikbd.toml  guidmn.py  guikbd.py  pyproject.toml  requirements.txt  termkbd.py  tools.py  wtype-emoji
.local/: .gitignore
res/: emoji-kbd.desktop  emoji-kbd.toml  emojikbd.toml
scripts/: emoji-kbd-ghostty-hl-close  emoji-kbd-ghostty-hl-open  emoji-kbd-ghostty-wl  emoji-kbd-gui-wl  emoji-kbd-kitty-hl-open  emoji-kbd.ahk
src/: board.py  boards.py  config.py  emojis.py  guidmn.py  guikbd.py  termkbd.py  tools.py
tests/: test_match.py
